feat: Pinata Integration + Announcement